intial html template code

--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -1,1 +1,11 @@
 <!--Learning HTML-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>First site</title>
+</head>
+<body>
+    
+</body>
+</html>
