adding unordered list to the body

--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -9,5 +9,12 @@
     <h1>Robsen Gelana</h1>
     <p><em>Founder and CEO of <strong>SIROSO Company</strong>.</em></p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi tempora delectus aliquid possimus, nihil et amet ducimus illo, porro officiis autem molestiae eaque error aut odio! Officiis ullam aliquam necessitatibus.</p>
+    <hr>
+    <h3>Education</h3>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ducimus fugiat vitae optio dignissimos ab tenetur! Alias quas ullam quis, temporibus sint eos ducimus eius assumenda tenetur provident, sed accusamus!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ducimus fugiat vitae optio dignissimos ab tenetur! Alias quas ullam quis, temporibus sint eos ducimus eius assumenda tenetur provident, sed accusamus!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ducimus fugiat vitae optio dignissimos ab tenetur! Alias quas ullam quis, temporibus sint eos ducimus eius assumenda tenetur provident, sed accusamus!</li>
+    </ul>
 </body>
 </html>
