--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -3,9 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First site</title>
 </head>
 <body>
+    <img src="lamborghini.jpg" alt="Lamborghini Image" width="300px", height="200px">
     <h1>Robsen Gelana</h1>
     <p><em>Founder and CEO of <strong>SIROSO Company</strong>.</em></p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi tempora delectus aliquid possimus, nihil et amet ducimus illo, porro officiis autem molestiae eaque error aut odio! Officiis ullam aliquam necessitatibus.</p>
