--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -10,7 +10,7 @@
 <body>
     <img src="lamborghini.jpg" alt="Lamborghini Image" width="300px", height="200px">
     <h1>Robsen Gelana</h1>
-    <p><em>Founder and CEO of <strong>SIROSO Company</strong>.</em></p>
+    <p><em>Founder and CEO of <strong><a href="siroso.com">SIROSO Company</a></strong>.</em></p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi tempora delectus aliquid possimus, nihil et amet ducimus illo, porro officiis autem molestiae eaque error aut odio! Officiis ullam aliquam necessitatibus.</p>
     <hr>
     <h3>Education</h3>
