--- a/Day_41/hobbies.html
+++ b/Day_41/hobbies.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Hobbies Page</h1>
+    <ol>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ab tempore dolorum. Dolorem, sunt dicta voluptas quas natus odit reprehenderit nesciunt error magni, libero maiores illo odio eligendi, magnam maxime.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic id, ad molestiae accusamus cumque sint iure exercitationem laborum, libero dicta alias? Numquam quisquam sint sunt in illum veritatis possimus qui.</li>
+        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse ea cum tempora ipsam quam repudiandae, qui, quis rem modi laboriosam quasi praesentium consequuntur aliquid aspernatur laborum quod corporis ut optio.</li>
+    </ol>
 </body>
 </html>
