--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -19,12 +19,19 @@
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ducimus fugiat vitae optio dignissimos ab tenetur! Alias quas ullam quis, temporibus sint eos ducimus eius assumenda tenetur provident, sed accusamus!</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ducimus fugiat vitae optio dignissimos ab tenetur! Alias quas ullam quis, temporibus sint eos ducimus eius assumenda tenetur provident, sed accusamus!</li>
     </ul>
+    <h3>Work Experience</h3>
+    <table>
+        <tr>
+            <td>2010-2015 </td>
+            <td>Sr. System Administrator</td>
+        </tr>
+        <tr>
+            <td>2016-2022 </td>
+            <td>Sr. Data Scientist</td>
+        </tr>
+    </table>
+    <hr>
     <h3> <a href="hobbies.html">Hobbies</a></h3>
-    <ol>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ab tempore dolorum. Dolorem, sunt dicta voluptas quas natus odit reprehenderit nesciunt error magni, libero maiores illo odio eligendi, magnam maxime.</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic id, ad molestiae accusamus cumque sint iure exercitationem laborum, libero dicta alias? Numquam quisquam sint sunt in illum veritatis possimus qui.</li>
-        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse ea cum tempora ipsam quam repudiandae, qui, quis rem modi laboriosam quasi praesentium consequuntur aliquid aspernatur laborum quod corporis ut optio.</li>
-    </ol>
     <h3> <a href="contact.html">Contact Me</a></h3>
 </body>
 </html>
