--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -21,6 +21,18 @@
     </ul>
     <h3>Work Experience</h3>
     <table>
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Role</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+        <tfoot>
+
+        </tfoot>
         <tr>
             <td>2010-2015 </td>
             <td>Sr. System Administrator</td>
