--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -8,10 +8,14 @@
     <title>First site</title>
 </head>
 <body>
-    <img src="lamborghini.jpg" alt="Lamborghini Image" width="300px", height="200px">
-    <h1>Robsen Gelana</h1>
-    <p><em>Founder and CEO of <strong><a href="siroso.com">SIROSO Company</a></strong>.</em></p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi tempora delectus aliquid possimus, nihil et amet ducimus illo, porro officiis autem molestiae eaque error aut odio! Officiis ullam aliquam necessitatibus.</p>
+    <table>
+        <tr>
+            <td><img src="lamborghini.jpg" alt="Lamborghini Image" width="300px", height="200px"></td>
+            <td><h1>Robsen Gelana</h1>
+                <p><em>Founder and CEO of <strong><a href="siroso.com">SIROSO Company</a></strong>.</em></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi tempora delectus aliquid possimus, nihil et amet ducimus illo, porro officiis autem molestiae eaque error aut odio! Officiis ullam aliquam necessitatibus.</p></td>
+        </tr>
+    </table>
     <hr>
     <h3>Education</h3>
     <ul>
@@ -20,7 +24,7 @@
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ducimus fugiat vitae optio dignissimos ab tenetur! Alias quas ullam quis, temporibus sint eos ducimus eius assumenda tenetur provident, sed accusamus!</li>
     </ul>
     <h3>Work Experience</h3>
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>Dates</th>
