--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -8,7 +8,7 @@
     <title>First site</title>
 </head>
 <body>
-    <table>
+    <table cellspacing="20">
         <tr>
             <td><img src="lamborghini.jpg" alt="Lamborghini Image" width="300px", height="200px"></td>
             <td><h1>Robsen Gelana</h1>
@@ -24,7 +24,7 @@
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ducimus fugiat vitae optio dignissimos ab tenetur! Alias quas ullam quis, temporibus sint eos ducimus eius assumenda tenetur provident, sed accusamus!</li>
     </ul>
     <h3>Work Experience</h3>
-    <table border="1">
+    <table>
         <thead>
             <tr>
                 <th>Dates</th>
@@ -41,9 +41,23 @@
                 <td>Sr. Data Scientist</td>
             </tr>
         </tbody>
-        <tfoot>
-
-        </tfoot>
+    </table>
+    <h3>Skills</h3>
+    <table>
+        <tr>
+            <td>
+                Python
+            </td>
+            <td>****</td>
+        </tr>
+        <tr>
+            <td>HTML</td>
+            <td>***</td>
+        </tr>
+        <tr>
+            <td>CSS</td>
+            <td>***</td>
+        </tr>
     </table>
     <hr>
     <h3> <a href="hobbies.html">Hobbies</a></h3>
