--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -45,17 +45,15 @@
     <h3>Skills</h3>
     <table>
         <tr>
-            <td>
-                Python
-            </td>
+            <td>Python</td>
             <td>****</td>
+            <td>CSS Style</td>
+            <td>***</td>
         </tr>
         <tr>
             <td>HTML</td>
             <td>***</td>
-        </tr>
-        <tr>
-            <td>CSS</td>
+            <td>Game Development</td>
             <td>***</td>
         </tr>
     </table>
