--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -43,20 +43,36 @@
         </tbody>
     </table>
     <h3>Skills</h3>
+
     <table>
         <tr>
-            <td>Python</td>
-            <td>****</td>
-            <td>CSS Style</td>
-            <td>***</td>
-        </tr>
-        <tr>
-            <td>HTML</td>
-            <td>***</td>
-            <td>Game Development</td>
-            <td>***</td>
+            <td>    <table>
+                <tr>
+                    <td>Python</td>
+                    <td>****</td>
+                </tr>
+                <tr>
+                    <td>HTML</td>
+                    <td>***</td>
+            </table>
+        </td>
+            <td>
+                <table>
+                    <tr>
+                        <td>CSS Style</td>
+                        <td>***</td>
+                    </tr>
+                    <tr>
+                        <td>Game Dev</td>
+                        <td>**</td>
+                    </tr>
+                </table>
+            </td>
         </tr>
     </table>
+
+
+
     <hr>
     <h3> <a href="hobbies.html">Hobbies</a></h3>
     <h3> <a href="contact.html">Contact Me</a></h3>
