creating a contact page

--- a/Day_41/contact.html
+++ b/Day_41/contact.html
@@ -7,6 +7,15 @@
     <title>Contact Page</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque id aliquam animi temporibus in eius a deserunt repellendus vel inventore sit, magni ducimus exercitationem dolorum libero tempore quisquam veritatis. Sequi!</p>
+    <h2>Contact Details</h2>
+    <form action="index.html" method="POST">
+        <label>Your Name:</label>
+        <input type="text"><br>
+        <label>Your Email:</label>
+        <input type="email"><br>
+        <label>Your Message:</label><br>
+        <textarea name="" id="" cols="30" rows="10"></textarea><br>
+        <input type="submit">
+    </form>
 </body>
 </html>
