finishing the pro

--- a/Day_41/contact.html
+++ b/Day_41/contact.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h2>Contact Details</h2>
-    <form action="index.html" method="POST">
+    <form action="mailto:info@robsen.com" method="POST" enctype="text/plain">
         <label>Your Name:</label>
-        <input type="text"><br>
+        <input type="text" name="yourName"><br>
         <label>Your Email:</label>
-        <input type="email"><br>
+        <input type="email" name="yourEmail"><br>
         <label>Your Message:</label><br>
-        <textarea name="" id="" cols="30" rows="10"></textarea><br>
+        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
         <input type="submit">
     </form>
 </body>
