--- a/Day_41/index.html
+++ b/Day_41/index.html
@@ -8,7 +8,12 @@
     <title>First site</title>
     <style>
         body {
-            background-color: lightblue;
+            background-color: #EAF6F6;
+        }
+        hr{
+            background-color: white;
+            border-style: none;
+            height: 2px;
         }
     </style>
 </head>
